--- a/src/app/styles/index.scss
+++ b/src/app/styles/index.scss
@@ -6,6 +6,7 @@
 @import './components/animes-containers';
 @import './components/auth';
 @import './components/anime-page-provider';
+@import './components/anime-page-modern';
 @import './components/mobile-anime-page-provider';
 @import './components/anime-modals';
 @import './components/settings_page';
